samples/_failures_safe/1761490792_f35712_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_913d5eb8.c: In function ‘main’:
./samples/SAFE/__tmp_913d5eb8.c:135:15: error: expected ‘;’ at end of input
  135 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_913d5eb8.c:135:9: error: expected declaration or statement at end of input
  135 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_913d5eb8.c:135:9: error: expected declaration or statement at end of input
